--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
-<!--Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Flat Profile Widget Flat Responsive Widget Template :: w3layouts</title>
+<title>Thinnakrit's Profile on GitHub</title>
 <script src="js/jquery-1.11.0.min.js"></script>
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
 <!-- Custom Theme files -->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
-<meta name="keywords" content="Flat Profile Widget Responsive, Login form web template, Sign up Web Templates, Flat Web Templates, Login signup Responsive web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-<!--google fonts-->
 <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 <link href='//fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
 
@@ -32,26 +25,26 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<img src="images/b1.jpg" alt="" >
 					</div>
 					<div class="profile-text1">
-						<h4>Nam libero</h4>
-						<p>Nam libero voluptatem</p>
+						<h4>Thinnakrit Knoo-Aksorn</h4>
+						<p>Bangkok, Thailand 10100</p>
 						<a href="#"><i></i>Follow Me</a>
 					</div>
 					<div class="clear"></div>
 			    </div>
 				<div class="profile-text2">
-					<p>Contrary to popular belief, Lorem Ipsum is not simply   </p>
+					<p>I'm programmer traveller, Nice to meet you ! </p>
 				</div>
 				<div class="clear"></div>
 				</div>
 			   <div class="profile-follow">
 			    	<ul>
-			    		<li class="folw-h"><h3>2850</h3>
+			    		<li class="folw-h"><h3>0</h3>
 			    			<p>Tweets</p>
 			    		</li>
-						<li ><h3>2850</h3>
+						<li ><h3>0</h3>
 			    			<p>Followers</p>
 			    		</li>
-			    		<li ><h3>675</h3>
+			    		<li ><h3>0</h3>
 			    			<p>Following</p>
 			    		</li>
 						<div class="clear"></div>
@@ -60,19 +53,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!---->
 				<div class="login-top">
 								<form action="#" method="get">
-									<input type="text" name="email" placeholder="Email" required=""/>
-									<input type="password" name="password" placeholder="Password" required=""/>	
-									<input type="checkbox" id="brand" value="">
-									<label for="brand"><span></span> Remember me?</label>
+									<input type="text" name="email" placeholder="Email" required="require"/>
+									<input type="text" name="text" placeholder="You message ..." required="require"/>	
+									
 								</form>
 								<div class="login-bottom">
 									<ul>
 										<li>
-											<a href="#">Forgot password?</a>
-										</li>
-										<li>
 											<form>
-												<input type="submit" value="LOGIN"/>
+												<input type="submit" value="Send Email"/>
 											</form>
 										</li>
 									</ul>
@@ -102,10 +91,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 	
 	  <div class="clear"> </div>
-</div>
-
-<div class="copy-right">
-			<p>© 2016 Flat Profile Widget. All rights reserved | Design by  <a href="http://w3layouts.com/" target="_blank">  W3layouts </a></p>
 </div>
 
 
