--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 				<div class="profile-top">
 				<div class="profile-text">
 					<div class="profile-img">
-						<img src="images/b1.jpg" alt="" >
+						Photo
 					</div>
 					<div class="profile-text1">
-						<h3>Thinnakrit Knoo-Aksorn</h3>
+						<h5>Thinnakrit Knoo-Aksorn</h5>
 						<p>Bangkok, Thailand 10100</p>
 						<a href="#"><i></i>Follow Me</a>
 					</div>
