--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						Photo
 					</div>
 					<div class="profile-text1">
-						<h5>Thinnakrit Knoo-Aksorn</h5>
+						<p><b>Thinnakrit Knoo-Aksorn</b></p>
 						<p>Bangkok, Thailand 10100</p>
 						<a href="#"><i></i>Follow Me</a>
 					</div>
