--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Thinnakrit's Profile on GitHub</title>
+<title>Thinnakrit's Profile :: GitHub</title>
 <script src="js/jquery-1.11.0.min.js"></script>
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
 <!-- Custom Theme files -->
