--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
 						<div class="clear"></div>
 			    	</ul>
 			    </div>
+				<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
 				<!---->
 				<div class="login-top">
 								<form action="#" method="get">
