--- a/index.html
+++ b/index.html
@@ -1,119 +1,14 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<head>
-<title>Thinnakrit's Profile :: GitHub</title>
-<script src="js/jquery-1.11.0.min.js"></script>
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
-<!-- Custom Theme files -->
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
-<link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-<link href='//fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
-
-<script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '133881393768710',
-      xfbml      : true,
-      version    : 'v2.8'
-    });
-  };
-
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script>
-</head>
-<body>
-<div class="element">
-		
-		<div class="element-left">
-			<div class="profile">
-				<div class="profile-top">
-				<div class="profile-text">
-					<div class="profile-img">
-						Photo
-					</div>
-					<div class="profile-text1">
-						<h2>Thinnakrit Knoo-Aksorn</h2>
-						<p>Bangkok, Thailand 10100</p>
-						<a href="#"><i></i>Follow Me</a>
-					</div>
-					<div class="clear"></div>
-			    </div>
-				<div class="profile-text2">
-					<p>I'm programmer traveller, Nice to meet you ! </p>
-				</div>
-				<div class="clear"></div>
-				</div>
-			   <div class="profile-follow">
-			    	<ul>
-			    		<li class="folw-h"><h3>0</h3>
-			    			<p>Tweets</p>
-			    		</li>
-						<li ><h3>0</h3>
-			    			<p>Followers</p>
-			    		</li>
-			    		<li ><h3>0</h3>
-			    			<p>Following</p>
-			    		</li>
-						<div class="clear"></div>
-			    	</ul>
-			    </div>
-				<div
-  class="fb-like"
-  data-share="true"
-  data-width="450"
-  data-show-faces="true">
-</div>
-				<!---->
-				<div class="login-top">
-								<form action="#" method="get">
-									<input type="text" name="email" placeholder="Email" required="require"/>
-									<input type="text" name="text" placeholder="You message ..." required="require"/>	
-									
-								</form>
-								<div class="login-bottom">
-									<ul>
-										<li>
-											<form>
-												<input type="submit" value="Send Email"/>
-											</form>
-										</li>
-									</ul>
-									<div class="clear"></div>
-								</div>	
-							</div>
-			
-
-				<!---->
-			</div>
-		</div>
-		<div class="social-icons">
-		  <a class="social-icon social-icon-1">
-			<i ></i>
-			<div class="tooltip ">Facebook</div>
-		  </a> 
-		 
-		  <a class="social-icon social-icon-1 social-icon-2">
-			<i class="ga"></i>
-			<div class="tooltip tooltip1">Google+</div>
-		  </a>
-		   <a class="social-icon social-icon-1 social-icon-3">
-			<i class="tw"></i>
-			<div class="tooltip tooltip2">Twitter</div>
-		  </a>
-	 
-	</div>
-	
-	  <div class="clear"> </div>
-</div>
-
-
-</body>
+  <head>
+    <meta charset=UTF-8>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>My App</title>
+    <link rel="stylesheet" href="static/style.css">
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="static/vendor.js"></script>
+    <script src="static/bundle.js"></script>
+  </body>
 </html>
